# revisao_escopo_edumatec_ufpe

./: README.md  pyproject.toml
health-edu-apps-etl/: pyproject.toml  streamlit_app.py
health-edu-apps-etl/dags/: dag_etl.py
health-edu-apps-etl/data/raw/: pubmed_articles.csv  pubmed_articles.parquet  scielo_articles.csv  scielo_articles.parquet  scopus_articles.csv  scopus_articles.parquet
health-edu-apps-etl/health_edu_apps_etl/: analyze_data.py  dashboard.py  etl_pipeline.py  extract_articles.py  extract_ieee.py  extract_pubmed.py  extract_scielo.py  extract_scopus.py  extract_wos.py  generate_report.py  transform_data.py
health-edu-apps-etl/notebooks/: exploratory_analysis.ipynb
health-edu-apps-etl/tests/: test_generate_report.py  test_ieee_api.py  test_pubmed_api.py  test_scielo_api.py  test_scopus_api.py  test_transform.py
